--- a/reload_ha.example
+++ b/reload_ha.example
@@ -4,12 +4,6 @@
 # Inport  will be shunted to first server
 # WARNING: assumes you don't have any other IPTables rules.
 
-#!/bin/sh
-# This script will gracefully restart haproxy without downtime by
-# shunting TCP connections directly to a local backend
-#  port 8000 will be shunted to port 8001
-# WARNING: assumes you don't have any other IPTables rules.
-
 # Start remap
 remap_start() {
 cat <<EOF | iptables-restore
@@ -17,8 +11,8 @@ cat <<EOF | iptables-restore
 :PREROUTING ACCEPT [81699:4934760]
 :POSTROUTING ACCEPT [3149436:193315427]
 :OUTPUT ACCEPT [3149436:193315427]
--A OUTPUT -p tcp -m tcp --dport 9000 -m state --state ESTABLISHED -j DNAT --to-destination 127.0.0.1:8002
--A OUTPUT -p tcp -m tcp --dport 9000 -m state --state NEW -j DNAT --to-destination 127.0.0.1:8002
+-A OUTPUT -p tcp -m tcp --dport 8000 -m state --state ESTABLISHED -j DNAT --to-destination 127.0.0.1:8001
+-A OUTPUT -p tcp -m tcp --dport 8000 -m state --state NEW -j DNAT --to-destination 127.0.0.1:8001
 COMMIT
 EOF
 }
@@ -30,7 +24,7 @@ cat <<EOF | iptables-restore
 :PREROUTING ACCEPT [81699:4934760]
 :POSTROUTING ACCEPT [3149436:193315427]
 :OUTPUT ACCEPT [3149436:193315427]
--A OUTPUT -p tcp -m tcp --dport 9000 -m state --state ESTABLISHED -j DNAT --to-destination 127.0.0.1:8002
+-A OUTPUT -p tcp -m tcp --dport 8000 -m state --state ESTABLISHED -j DNAT --to-destination 127.0.0.1:8001
 COMMIT
 EOF
 }
@@ -48,15 +42,19 @@ EOF
 
 # don't return until all remaps are drained
 remap_detect() {
-while egrep "^tcp +[0-9]+ +[0-9]+ +ESTABLISHED src=127.0.0.1 dst=127.0.0.1 sport=[0-9]+ dport=9000.*dst=127.0.0.1 sport=8002" /proc/net/nf_conntrack; do
+while egrep "^tcp +[0-9]+ +[0-9]+ +ESTABLISHED src=127.0.0.1 dst=127.0.0.1 sport=[0-9]+ dport=8000.*dst=127.0.0.1 sport=8001" /proc/net/nf_conntrack; do
+echo "waiting for iptables connections to drain on port 8000"
 sleep 2
 done
 }
 
 # restart ha proxy
 restart_ha_proxy() {
-haproxy -f haproxy_temp.cfg -p hap.pid -st $(cat hap.pid);
+haproxy -f haproxy.cfg -p hap.pid -st $(cat hap.pid);
+#done
 }
+
+#service haproxy check    # bail on error
 
 remap_start   # Start forwarding new connections
 
